--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -6,17 +6,19 @@
 
     <item
         android:id="@+id/action_search"
-        android:orderInCategory="100"
-        android:title="Search"
         android:icon="@drawable/ic_search"
-        app:actionViewClass="android.support.v7.widget.SearchView"
-        app:showAsAction="collapseActionView|always"
-        android:theme="@android:style/Theme.Holo.Light.DarkActionBar"/>
+        android:orderInCategory="100"
 
-    <item
+        android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
+        android:title="Search"
+        android:visible="false"
+        app:actionViewClass="android.support.v7.widget.SearchView"
+        app:showAsAction="collapseActionView|always" />
+
+    <!--item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="Settings"
-        app:showAsAction="never"/>
+        app:showAsAction="never"/-->
 
 </menu>
